tests/fixtures/pass/unit_values.sc
let take(value: ()): i32 = 42

let main(): i32 = {
  let mut value = ()
  value = ()
  take(value)
}
