tests/fixtures/fail/borrow_value_copy_mut.sc
let inspect(copy value: borrow(mut)(i32)): i32 = { value }
let main(): i32 = { 42 }
